@@ -1,3 +1,12 @@
+2001-07-23  Sergey Chaban <serge@wildwestsoftware.com>
+
+	*  Hashtable.cs: Fixed bug in Clear(), the Count wasn't zeroed.
+           From now, Clear() increases modification count.
+           Fixed HCP bug in GetHash(object) - hcp.GetHashCode() was used
+           instead of hcp.GetHashCode(key). This was resulted in the
+           insanely long lookup times when HashCodeProvider was used to
+           construct Hashtable. Added thread-safe wrapper.
+
 2001-07-16  David Menestrina <dmenest@yahoo.com>
 
          * BitArray.cs: Add
